--- a/styleForPresets.css
+++ b/styleForPresets.css
@@ -89,8 +89,7 @@ h5 {
   margin: auto;
 }
 .presetPictureDesktop {
-  width: 70%;
-  margin: auto;
+  width: 90%;
   margin-bottom: 40px;
   border-radius: 10px;
 }
@@ -190,14 +189,19 @@ h5 {
 .gridPresetPreviewDesktop {
   margin-top: 80px; /* FIX THIS LATER*/
   display: grid;
-  width: 100%;
-  grid-template-columns: 10% 23% 33% 33%;
-  grid-template-rows: 1fr;
+  width: 80%;
+margin-right: auto;
+margin-left: auto;
+  grid-template-columns:  1fr 1fr 1fr;
 }
 .presetPictureMobile {
   width: 80%;
 }
-.presetOptions {
+.possibleOptions{
+  margin-top: -30%;
+  margin-left: 10%;
+}
+.presetOptions { /*style later*/
 }
 a:hover {
   text-decoration: none;
