--- a/style.css
+++ b/style.css
@@ -62,9 +62,7 @@ p {
   margin-bottom: 8px;
   text-align: center;
 }
-.title1,
-.title2,
-.title3 {
+.titleChooseUs {
   position: relative;
   color: #5a5a5a;
   font-size: 25px;
@@ -1209,7 +1207,6 @@ p {
 @media screen and (min-width: 769px) {
   .chooseUsMobilePictures,
   .chooseUsMobileText,
-  .ourWorkplaceMobile,
   .sliderChooseUs,
   .ourMindsetMobilePictures .ourPartnersMobile,
   .ourWorkpalceMobileText {
@@ -1331,4 +1328,8 @@ p {
   .footer-desktop p {
     font-family: segoe;
   }
+}
+.activeTitle,
+.activeOption:hover {
+  text-decoration: underline;
 }
