--- a/style.css
+++ b/style.css
@@ -372,6 +372,7 @@ p {
     display: block;
     position: relative;
     top: 0;
+    width: 100%;
   }
   .featuredImgFrame {
     position: relative;
