--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 @font-face {
   font-family: segoe;
-  src: url(fonts/Segoe\ UI.ttf);
+  src: url(fonts/SegoeUI.ttf);
   font-display: swap;
 }
 /*elements desktop*/
@@ -15,6 +15,7 @@ html {
   padding: 0;
   height: 100%;
 }
+
 h5 {
   font-size: 20px;
   margin: 10px;
@@ -25,6 +26,13 @@ h5 {
 .vl {
   border-left: 2px solid rgb(0, 0, 0);
   height: 50px;
+}
+.vl2 {
+  position: absolute;
+  top: 920px;
+  left: 50%;
+  border-left: 1px solid rgb(0, 0, 0);
+  height: 70%;
 }
 .headstyle1 {
   color: #5a5a5a;
@@ -42,9 +50,6 @@ h5 {
   font-family: sitka;
   padding: 0;
   margin: 0;
-}
-
-p {
 }
 .text-cont {
   color: #5a5a5a;
@@ -70,6 +75,16 @@ p {
   padding: 0;
   margin: 0;
   margin-left: 4rem;
+}
+.title1{
+  position: relative;
+  color: #5a5a5a;
+  font-size: 28px;
+  font-family: segoe;
+  padding: 0;
+  margin: 10px;
+  margin-left: 4rem;
+
 }
 .spacer1 {
   width: 100%;
@@ -154,22 +169,22 @@ p {
 .btn1-light {
   appearance: none;
   background-color: transparent;
-  border: 2px solid #3b3b3b;
+  border: 1px solid #3b3b3b;
   border-radius: 55px;
   box-sizing: border-box;
   color: #3b3b3b;
   cursor: pointer;
   display: inline-block;
-  font-family: Segoe;
+  font-family: segoe;
   font-size: 25px;
   line-height: normal;
   min-width: 0;
   outline: none;
-  padding: 10px 20px;
+  padding: 5px 15px;
   text-align: center;
   text-decoration: none;
   user-select: none;
-  width: 450px;
+  width: 300px;
   will-change: transform;
   background-color: rgb(245, 243, 237);
   transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -270,7 +285,7 @@ p {
     color: #3b3b3b;
     cursor: pointer;
     display: inline-block;
-    font-family: Segoe;
+    font-family: segoe;
     font-size: 15px;
     line-height: normal;
     min-width: 0;
@@ -280,6 +295,27 @@ p {
     text-decoration: none;
     user-select: none;
     width: 250px;
+    will-change: transform;
+  }
+  .btn2-light {
+    appearance: none;
+    background-color: rgb(243, 240, 234);
+    border: 1px solid #3b3b3b;
+    border-radius: 55px;
+    box-sizing: border-box;
+    color: #3b3b3b;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Segoe;
+    font-size: 15px;
+    line-height: normal;
+    min-width: 0;
+    outline: none;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    width: 120px;
     will-change: transform;
   }
   /*content element modules - mobile*/ 
@@ -365,9 +401,8 @@ p {
   .nav-mobile {
     position: relative;
   }
-
   /*featured-mobile*/
-  /*featured picture desktop*/
+
   .featuredImg {
     display: block;
     position: relative;
@@ -379,7 +414,6 @@ p {
     width: 100%;
     height: 100%;
   }
-
   #featured {
     display: none;
   }
@@ -667,12 +701,29 @@ p {
     text-align: center;
   }
   /*season-wheel-mobile*/
+  #preset-container{
+    display: none;
+  }
   .season-wheel{
     position: relative;
     max-height: auto;
     position: relative;
-    top: 60px;
-    
+    top: 60px; 
+  }
+  .seasons-btns-mobile{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    top: 80px;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    background-color: #71717144;
+  }
+  .seasons-btns-desktop{
+    display: none;
   }
   .flowers-container{
     position: relative;
@@ -680,11 +731,10 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: antiquewhite;
-   
   }
   .flower-frame{
     max-width: 20vh;
+    
     text-align: center;
     margin: 10px;
     
@@ -698,6 +748,8 @@ p {
       position: relative;
       top: -20%;
       font-family: segoe;
+      color: rgb(255, 255, 255);
+      background-color: #5a5a5a42;
   }
   
   .wheel-section{
@@ -837,7 +889,7 @@ p {
   }
   .nav-link {
     margin: 10px;
-    font-size: 20px;
+    font-size: 30px;
     color: black;
     font-family: sitka;
   }
@@ -968,7 +1020,7 @@ p {
     overflow: hidden;
   }
   .presentation-content div {
-    height: 55vh;
+    height: 45vh;
     flex-grow: 1;
     margin-top: 8px;
   }
@@ -1134,6 +1186,7 @@ p {
     position: relative;
   }
   .prog-description {
+    top: -20px;
     height: 100%;
     padding-left: 10%;
     padding-right: 10%;
@@ -1187,7 +1240,228 @@ p {
     font-size: 1.7rem;
     margin-left: 30px;
   }
+  /*style your wedding-mobile*/
+  .styleYourWedding {
+    position: relative;
+    top: 10px;
+    width: 100%;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+  }
+
+  /*season-Desktop*/
+  
+  /*season-wheel-Desktop*/
+  .season-title{
+    position: relative;
+    top: 100px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+  }
+  #season-desktop-frame{
+    position: relative;
+    width: 80%;
+    height: 80vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .season-wheel{
+    position: relative;
+    max-height: auto;
+    position: relative;
+    top: 20%; 
+  }
+  .seasons-btns-desktop{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 70vh 1vh;
+    top: 10px;
+    align-items: center;
+    align-content: center;
+    text-align: center;   
+  }
+  .seasons-btns-mobile{
+    display: none;
+  }
+  .flowers-container{
+    position: relative;
+    top: 10vh;
+    width: 100%;
+    max-width: 700px;
+    height: 70vh;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+    justify-content: center;
+  }
+  .flower-frame{
+    max-width: 20vh;
+    max-height: 30vh;
+    text-align: center;
+    margin: 10px;
+    align-items: center;
+    align-content: center;
+  }
+  .flower{
+    position: relative;
+    max-width: 20vh;
+    border-radius: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  .flower-name{
+      position: relative;
+      top: -20%;
+      font-family: segoe;
+      color: rgb(255, 255, 255);
+      background-color: #5a5a5a42;
+  }
+  
+  .wheel-frame{
+    position: relative;
+    width: 500px;
+    height: 500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #arrow{
+    position: absolute;
+    width: 30px;
+    left: 235px;
+    z-index: 10;
+    top: 50px;
+
+  }
+  .season-pics{
+    position: absolute;
+    width: 500px;
+    rotate: 0deg;
+    margin-right: auto;
+    margin-left: auto;
+    z-index: -1;
+  
+  }
+  #link-grid{
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    transform: rotate(46deg);
+    transition: all 2s linear;
+    
+  }
+  .link{
+    position: absolute;
+    width: 250px;
+    height: 250px;
+    rotate: 0deg;
+    margin-right: auto;
+    margin-left: auto;
+    cursor: pointer;
+    z-index: 10;
+  
+  }
+  #months{
+    transform: rotate(0deg);
+    transition: all 2s linear;
+  }
+
+
+  #springlink{
+    position: relative;
+    border-radius: 20vh 0 0 0;
+    background-color: rgba(72, 255, 0, 0.0);
+    z-index: 2;
+  }
+  #summerlink{
+    position: relative;
+    border-radius: 0 0 0 20vh;
+    background-color: rgba(255, 230, 0, 0.0);
+    z-index: 2;
+  }
+  #autumlink{
+    position: relative;
+    border-radius: 0 0 20vh 0;
+    background-color: rgba(255, 60, 0, 0.0);
+    z-index: 2;
+  }
+  #winterlink{
+    position: relative;
+    border-radius: 0 20vh 0 0;
+    background-color: rgba(0, 132, 255, 0.0);
+    z-index: 2;
+  }
+  /*preset preview Desktop NEW CSS*/
+.preview-text {
+  margin-top: 10%;
+  text-align: center;
 }
+#preset-container {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  top: 60px;
+  width: 90%;
+  height: max-content;
+  border-radius: 40px;
+  align-items: center;
+  background: url(img/sectionback.webp);
+  background-size: cover;
+}
+#presetPreview {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 700px;
+  position: relative;
+  width: 100%;
+  height: 40%;
+  background-color: #e9e7deb7;
+  z-index: 1;
+  margin: auto;
+  border-radius: 40px;
+}
+.mySlides2 {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 70%;
+  min-width: 300px;
+  border-radius: 15px;
+}
+.presetSlideshow {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+.discoverPresetsText {
+  max-width: 800px;
+  margin: auto;
+}
+.slideShowPreset {
+  margin-top: -40px;
+  display: flex;
+  justify-content: center;
+}
+.white-cell {
+  border-color: white;
+}
+.white-cell:hover {
+  background-color: white;
+}
+}
+/*preset preview End*/
+  /*season-wheel-Desktop-END*/
+
 
 /* style for hover effect  // thanks goes to https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_image_overlay_opacity */
 
@@ -1428,7 +1702,6 @@ p {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 0.2fr 1fr;
-
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -1436,6 +1709,7 @@ p {
     background-image: url(img/sectionback.webp);
     background-size: cover;
     background-position: 0px;
+
   }
   .footer-desktop h5 {
     font-family: sitka;
