--- a/styleForPresets.css
+++ b/styleForPresets.css
@@ -75,7 +75,7 @@ h5 {
 .mySlides2 {
   margin-right: auto;
   margin-left: auto;
-  max-width: 50%;
+  max-width: 420px;
   min-width: 300px;
   border-radius: 15px;
 }
@@ -91,27 +91,21 @@ h5 {
 }
 .presetTextAdjust {
   max-width: 200px;
-  margin-left: 12%;
-  margin-top: -9%;
+  margin-top: 40%;
 }
 .presetText {
 }
 /*preset preview End*/
 /* NAVIGATION BUTTONS*/
-.navigationButtons {
+.navigationButtonsDesktop,
+.navigationButtonsMobile {
   display: flex;
   justify-content: space-around;
 }
-.nextStep {
-  background-color: white;
-  border-color: #5a5a5a;
-  border-radius: 20px;
+.navigationButtonsMobile {
+  margin-top: 4%;
 }
-.prevStep {
-  margin-right: 30%;
-  background-color: white;
-  border-color: #5a5a5a;
-  border-radius: 20px;
+.navigationButtonsDesktop {
 }
 /*FOOTER*/
 .footer-mobile {
@@ -119,11 +113,11 @@ h5 {
 }
 .footer-desktop {
   background-image: url(img/sectionback.webp);
+  margin-top: -6%;
 }
 /* CAROUSEL*/
 .carousel {
-  width: 100%;
-  height: 70%;
+  aspect-ratio: 1/1;
   background-size: cover;
   background-position: center;
   background-image: url(img/bouquet1.webp);
@@ -150,43 +144,7 @@ h5 {
     opacity: 1;
   }
 }
-@media screen and (max-width: 768px) {
-  .slider-cell {
-    margin: 6px;
-  }
-}
 
-/* hiding mobile elements for Making desktop ver */
-@media screen and (min-width: 769px) {
-  .carousel,
-  .presetPartsTextMobile,
-  .sliderButtons,
-  .shownProduct,
-  .bouquetePart,
-  .boringInfo {
-    /*this shit is overlapping somewhere */
-    display: none;
-  }
-  .bouquetePart {
-    visibility: hidden;
-  }
-} /*  hiding DEsktop elements for  phone version*/
-@media screen and (max-width: 768px) {
-  .gridPresetPreviewDesktop,
-  .presetOptions,
-  .presetPictureMobile .preview-text,
-  #preset-container,
-  #presetPreview,
-  .mySlides2,
-  .presetSlideshow,
-  .discoverPresetsText,
-  .presetPictureDesktop {
-    display: none;
-  }
-  .btn1-light {
-    width: 140px;
-  }
-}
 .gridPresetPreviewDesktop {
   margin-top: 100px;
   display: flex;
@@ -196,21 +154,10 @@ h5 {
   justify-content: space-around;
 }
 .presetPictureDesktop {
-  /* FIX THIS LATER
-  display: grid;
-  width: 80%;
-margin-right: auto;
-margin-left: auto;
-  grid-template-columns:  1fr 1fr 1fr;
-  */
   display: flex;
-  min-width: 200px;
-  max-width: 420px;
-  max-height: 540px;
-}
-.presetPictureDesktop {
   margin-bottom: 40px;
   border-radius: 10px;
+  max-width: 420px;
 }
 
 .presetPictureMobile {
@@ -239,4 +186,48 @@ a:active {
 }
 .white-cell:hover {
   background-color: white;
+}
+@media screen and (max-width: 768px) {
+  .slider-cell {
+    margin: 6px;
+  }
+}
+
+/* hiding mobile elements for Making desktop ver */
+@media screen and (min-width: 769px) {
+  .carousel,
+  .presetPartsTextMobile,
+  .sliderButtons,
+  .shownProduct,
+  .bouquetePart,
+  .boringInfo,
+  .navigationButtonsMobile {
+    /*this shit is overlapping somewhere */
+    display: none;
+  }
+  .bouquetePart {
+    visibility: hidden;
+  }
+  .btn1-light {
+    max-width: 250px;
+    max-height: 60px;
+  }
+} /*  hiding DEsktop elements for  phone version*/
+@media screen and (max-width: 768px) {
+  .gridPresetPreviewDesktop,
+  .presetOptions,
+  .presetPictureMobile .preview-text,
+  #preset-container,
+  #presetPreview,
+  .mySlides2,
+  .presetSlideshow,
+  .discoverPresetsText,
+  .navigationButtonsDesktop,
+  .presetPictureDesktop,
+  .gridPresetPreviewDesktop {
+    display: none;
+  }
+  .btn1-light {
+    width: 140px;
+  }
 }
