--- a/styleForPresets.css
+++ b/styleForPresets.css
@@ -294,7 +294,7 @@ h6 {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  height: 400px;
+  height: 470px;
   margin-bottom: 10%;
 }
 .availableFlowersSlide {
@@ -309,6 +309,13 @@ h6 {
   margin-top: -3%;
   margin-bottom: 8%;
 }
+.navigationButtonsDesktopContact {
+  margin-top: 20%;
+}
+.navigationButtonsMobileContact {
+  margin-top: 6%;
+  margin-left: 8%;
+}
 /* hiding mobile elements for Making desktop ver for Contact page */
 @media screen and (min-width: 769px) {
   .yourConfigurationSection {
@@ -322,6 +329,48 @@ h6 {
   .contactDesktopGrid,
   .navigationButtonsDesktopFix,
   h6 {
+    display: none;
+  }
+}
+/* Style for 404 error*/
+.errorContainer {
+  background: url(img/sectionback.webp);
+  background-size: cover;
+  width: 90%;
+  margin-top: 4%;
+  margin-bottom: 7%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 638px;
+  border-radius: 15px;
+}
+.errorPicture {
+  width: 638px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/*style for 404 mobile*/
+.errorContainerMobile {
+  background: url(img/sectionback.webp);
+  background-size: cover;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 16%;
+  border-radius: 15px;
+}
+.errorPictureMobile {
+  width: 80%;
+}
+/* hiding mobile elements for Making desktop ver for 404 */
+@media screen and (min-width: 769px) {
+  .errorContainerMobile {
+    display: none;
+  }
+}
+/*  hiding DEsktop elements for  phone version 404*/
+@media screen and (max-width: 768px) {
+  .errorContainer {
     display: none;
   }
 }
