--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h5 {
   margin: 10px;
   padding: 0;
   font-family: sitka;
-  color: #3b3b3b;
+  color: #707070;
 }
 .vl {
   border-left: 2px solid rgb(0, 0, 0);
@@ -35,7 +35,7 @@ h5 {
   height: 70%;
 }
 .headstyle1 {
-  color: #5a5a5a;
+  color: #707070;
   font-size: 45px;
   font-family: sitka;
   padding: 0;
@@ -52,14 +52,14 @@ h5 {
   margin: 0;
 }
 .text-cont {
-  color: #5a5a5a;
+  color: #707070;
   font-size: 23px;
   font-family: segoe;
   padding: 0;
   margin: 0;
 }
 .text-cont2 {
-  color: #5a5a5a;
+  color: #707070;
   font-size: 23px;
   font-family: segoe;
   padding: 0;
@@ -69,7 +69,7 @@ h5 {
 }
 .titleChooseUs {
   position: relative;
-  color: #5a5a5a;
+  color: #707070;
   font-size: 25px;
   font-family: segoe;
   padding: 0;
@@ -78,7 +78,7 @@ h5 {
 }
 .title1{
   position: relative;
-  color: #5a5a5a;
+  color: #707070;
   font-size: 28px;
   font-family: segoe;
   padding: 0;
@@ -95,24 +95,25 @@ h5 {
   height: 20vh;
 }
 /*buttons*/
-.button-28 {
+.button-main {
+  position: absolute;
+  left: 9%;
+  bottom: 30%;
   appearance: none;
-  background-color: transparent;
-  border: 1px solid #3b3b3b;
+  background-color:#edede8;
+  border: 1px solid #707070;
   border-radius: 55px;
   box-sizing: border-box;
-  color: #3b3b3b;
+  color: #707070;
   cursor: pointer;
   display: inline-block;
   font-family: Segoe;
   font-size: 25px;
-  font-weight: 600;
   line-height: normal;
-  margin: 110px;
-  min-height: 60px;
+  min-height: 45px;
   min-width: 0;
   outline: none;
-  padding: 16px 24px;
+  padding: 0px 0px;
   text-align: center;
   text-decoration: none;
   transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -121,13 +122,14 @@ h5 {
   touch-action: manipulation;
   width: 250px;
   will-change: transform;
+  
 }
 
-.button-28:disabled {
+.button-main:disabled {
   pointer-events: none;
 }
 
-.button-28:hover {
+.button-main:hover {
   color: #fff;
   background-color: #3b3b3b;
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
@@ -455,6 +457,7 @@ h5 {
     position: relative;
     top: 0;
     width: 100%;
+   
   }
 
   /*Our programs-mobile*/
@@ -904,7 +907,7 @@ h5 {
     align-items: center;
     background: url(img/sectionback.webp);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 70%;
   }
   #featured {
     display: grid;
@@ -936,36 +939,38 @@ h5 {
     margin: 0;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+    overflow: hidden; 
   }
   .videoframe {
     position: relative;
     width: 100%;
     overflow: hidden;
-    padding-top: 56.25%;
+    padding-top: 300px;
     border-radius: 0 40px 40px 0;
   }
-
   .featured-text {
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15vh;
     text-align: center;
-    height: 80vh;
+    width: 80%; 
   }
-
   .featured-inspired {
     color: #5a5a5a;
     font-size: 1.8rem;
-    font-family: sitka;
+    font-family: segoe;
     padding: 0;
-    margin: 3vh;
-    margin-left: 5vh;
+    margin: 1vh;
+    margin-left: 2vh;
     text-align: left;
   }
   #inspiration {
+    text-align: left;
     color: #5a5a5a;
     font-size: 40px;
     font-family: sitka;
     padding: 0;
-    margin: 0;
+    margin-left: 5vh;
     margin-top: 2vh;
     margin-bottom: 2vh;
   }
@@ -998,7 +1003,10 @@ h5 {
     margin-right: auto;
     margin-top: 8vh;
   }
-
+  .slide-card{
+    position: relative;
+    margin-top: 200px;
+  }
   .slide-card-nav {
     position: relative;
     width: 100%;
@@ -1029,20 +1037,21 @@ h5 {
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
-    height: 10vh;
+    width: 100%;
+    height: 12vh;
     text-align: center;
     background-color: #e9e7deb7;
-    border-radius: 15px;
+    border-radius: 10px;
+    
+    
   }
   .present-description {
     position: relative;
     color: #5a5a5a;
-    font-size: 20px;
+    font-size: 22px;
     font-family: segoe;
-    margin-top: 0;
-    margin-left: 1rem;
-    padding: 5px;
+    padding-left: 5vh;
+    padding-right: 5vh;
   }
   .present-img-description {
     position: relative;
@@ -1498,55 +1507,6 @@ h5 {
 }
 /* end style for hover effect*/
 
-/*test function imagechange
-#testimage {
-  border-radius: 50%;
-  width: 500px;
-}
-#spring {
-  background-color: #c9ff71;
-  height: 100px;
-  width: 100px;
-  border-radius: 100px 0 0 0;
-}
-#summer {
-  background-color: #ffea71;
-  height: 100px;
-  width: 100px;
-  border-radius: 0 100px 0 0;
-}
-#autum {
-  background-color: #ff7171;
-  height: 100px;
-  width: 100px;
-  border-radius: 0 0 0 100px;
-}
-#winter {
-  background-color: #71bfff;
-  height: 100px;
-  width: 100px;
-  border-radius: 0 0 100px 0;
-}
-#season-box {
-  position: relative;
-  display: grid;
-  grid-template-columns: 100px 100px;
-  grid-template-rows: 100px 100px;
-
-  width: 200px;
-  height: 200px;
-}
-.season {
-  cursor: pointer;
-}
-
-.someIcons {
-  margin-left: 10px;
-  margin-right: 10px;
-  cursor: pointer;
-}
-*/
-
 /*choose us-Mobile */
 @media screen and (max-width: 768px) {
   .content-card-nav{
@@ -1641,26 +1601,20 @@ h5 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 0.2fr 1fr;
-    background-image: url(img/sectionback.webp);
     background-size: cover;
     margin-top: 40px;
     text-align: center;
     height: max-content;
   }
-  .footercontent {
-    text-align: center;
-    align-items: center;
-    font-size: 20px;
-  }
   .someIcons {
     margin-left: 0;
   }
-
   .footercontent {
     justify-content: center;
     text-align: center;
     align-items: center;
     font-size: 20px;
+    text-decoration: none;
   }
   .someIcons {
     margin-left: 10px;
@@ -1678,17 +1632,16 @@ h5 {
     text-align: center;
     font-size: 14px;
     margin-top: 10px;
-    font-family: sitka;
+    font-family: segoe;
     color: #3b3b3b;
+    text-decoration: none;
   }
 }
-
 /*footer desktop Aleks*/
 @media screen and (min-width: 768px) {
   .boringInfo {
     display: none;
   }
-
   .footer-desktop {
     width: 100%;
     display: grid;
@@ -1698,10 +1651,8 @@ h5 {
     justify-content: center;
     align-items: center;
     margin-top: 20px;
-    background-image: url(img/sectionback.webp);
     background-size: cover;
     background-position: 0px;
-
   }
   .footer-desktop h5 {
     font-family: sitka;
