--- a/style.css
+++ b/style.css
@@ -38,8 +38,6 @@ h5 {
   color: #5a5a5a;
   font-size: 45px;
   font-family: sitka;
-  padding: 0;
-  margin: 0;
   margin-top: 1vh;
   margin-bottom: 1vh;
   margin-left: 1rem;
@@ -76,7 +74,7 @@ h5 {
   margin: 0;
   margin-left: 4rem;
 }
-.title1{
+.title1 {
   position: relative;
   color: #5a5a5a;
   font-size: 28px;
@@ -84,7 +82,6 @@ h5 {
   padding: 0;
   margin: 10px;
   margin-left: 4rem;
-
 }
 .spacer1 {
   width: 100%;
@@ -220,7 +217,9 @@ h5 {
 .content-card-frame {
   position: relative;
   width: 100%;
-  background-color: #e9e7deb7;
+  background: url(img/sectionback.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
   z-index: 1;
   margin: auto;
   border-radius: 40px;
@@ -318,7 +317,7 @@ h5 {
     width: 120px;
     will-change: transform;
   }
-  /*content element modules - mobile*/ 
+  /*content element modules - mobile*/
   .content-card {
     position: relative;
     margin-left: auto;
@@ -389,8 +388,6 @@ h5 {
   }
   .nav-item-desk {
     display: none;
-  }
-  .nav-mobile {
   }
   .nav-link {
     margin: 5px;
@@ -701,16 +698,16 @@ h5 {
     text-align: center;
   }
   /*season-wheel-mobile*/
-  #preset-container{
+  #preset-container {
     display: none;
   }
-  .season-wheel{
+  .season-wheel {
     position: relative;
     max-height: auto;
     position: relative;
-    top: 60px; 
+    top: 60px;
   }
-  .seasons-btns-mobile{
+  .seasons-btns-mobile {
     position: relative;
     width: 100%;
     height: 50px;
@@ -722,66 +719,58 @@ h5 {
     text-align: center;
     background-color: #71717144;
   }
-  .seasons-btns-desktop{
+  .seasons-btns-desktop {
     display: none;
   }
-  .flowers-container{
+  .flowers-container {
     position: relative;
     top: 100px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
   }
-  .flower-frame{
+  .flower-frame {
     max-width: 20vh;
-    
+
     text-align: center;
     margin: 10px;
-    
   }
-  .flower{
+  .flower {
     position: relative;
     max-width: 20vh;
     border-radius: 10px;
   }
-  .flower-name{
-      position: relative;
-      top: -20%;
-      font-family: segoe;
-      color: rgb(255, 255, 255);
-      background-color: #5a5a5a42;
+  .flower-name {
+    position: relative;
+    top: -20%;
+    font-family: segoe;
+    color: rgb(255, 255, 255);
+    background-color: #5a5a5a42;
   }
-  
-  .wheel-section{
-  
-  }
-  .wheel-frame{
+
+  .wheel-frame {
     position: relative;
     width: 320px;
     height: 320px;
     margin-left: auto;
     margin-right: auto;
-    
-    
   }
-  #arrow{
+  #arrow {
     position: absolute;
     width: 25px;
     left: 150px;
     z-index: 10;
     top: 30px;
-
   }
-  .season-pics{
+  .season-pics {
     position: absolute;
     width: 320px;
     rotate: 0deg;
     margin-right: auto;
     margin-left: auto;
     z-index: -1;
-  
   }
-  #link-grid{
+  #link-grid {
     position: absolute;
     width: 320px;
     height: 320px;
@@ -790,9 +779,8 @@ h5 {
     grid-template-rows: 1fr 1fr;
     transform: rotate(46deg);
     transition: all 2s linear;
-    
   }
-  .link{
+  .link {
     position: absolute;
     width: 160px;
     height: 160px;
@@ -801,36 +789,34 @@ h5 {
     margin-left: auto;
     cursor: pointer;
     z-index: 10;
-  
   }
-  #months{
+  #months {
     transform: rotate(0deg);
     transition: all 2s linear;
   }
 
-
-  #springlink{
+  #springlink {
     position: relative;
     border-radius: 20vh 0 0 0;
-    background-color: rgba(72, 255, 0, 0.0);
+    background-color: rgba(72, 255, 0, 0);
     z-index: 2;
   }
-  #summerlink{
+  #summerlink {
     position: relative;
     border-radius: 0 0 0 20vh;
-    background-color: rgba(255, 230, 0, 0.0);
+    background-color: rgba(255, 230, 0, 0);
     z-index: 2;
   }
-  #autumlink{
+  #autumlink {
     position: relative;
     border-radius: 0 0 20vh 0;
-    background-color: rgba(255, 60, 0, 0.0);
+    background-color: rgba(255, 60, 0, 0);
     z-index: 2;
   }
-  #winterlink{
+  #winterlink {
     position: relative;
     border-radius: 0 20vh 0 0;
-    background-color: rgba(0, 132, 255, 0.0);
+    background-color: rgba(0, 132, 255, 0);
     z-index: 2;
   }
   /*season-wheel-mobile-END*/
@@ -1204,11 +1190,9 @@ h5 {
     text-align: left;
     align-self: right;
   }
-  .prog-description p {
-  }
 
   /*choose us-Desktop*/
-  .chooseus-nav-mobile{
+  .chooseus-nav-mobile {
     display: none;
   }
   .chooseus-nav {
@@ -1251,9 +1235,9 @@ h5 {
   }
 
   /*season-Desktop*/
-  
+
   /*season-wheel-Desktop*/
-  .season-title{
+  .season-title {
     position: relative;
     top: 100px;
     width: 80%;
@@ -1261,7 +1245,7 @@ h5 {
     margin-right: auto;
     margin-bottom: 20px;
   }
-  #season-desktop-frame{
+  #season-desktop-frame {
     position: relative;
     width: 80%;
     height: 80vh;
@@ -1270,13 +1254,13 @@ h5 {
     margin-left: auto;
     margin-right: auto;
   }
-  .season-wheel{
+  .season-wheel {
     position: relative;
     max-height: auto;
     position: relative;
-    top: 20%; 
+    top: 20%;
   }
-  .seasons-btns-desktop{
+  .seasons-btns-desktop {
     position: relative;
     width: 100%;
     height: 50px;
@@ -1286,12 +1270,12 @@ h5 {
     top: 10px;
     align-items: center;
     align-content: center;
-    text-align: center;   
+    text-align: center;
   }
-  .seasons-btns-mobile{
+  .seasons-btns-mobile {
     display: none;
   }
-  .flowers-container{
+  .flowers-container {
     position: relative;
     top: 10vh;
     width: 100%;
@@ -1302,7 +1286,7 @@ h5 {
     overflow: hidden;
     justify-content: center;
   }
-  .flower-frame{
+  .flower-frame {
     max-width: 20vh;
     max-height: 30vh;
     text-align: center;
@@ -1310,46 +1294,44 @@ h5 {
     align-items: center;
     align-content: center;
   }
-  .flower{
+  .flower {
     position: relative;
     max-width: 20vh;
     border-radius: 10px;
     margin-top: auto;
     margin-bottom: auto;
   }
-  .flower-name{
-      position: relative;
-      top: -20%;
-      font-family: segoe;
-      color: rgb(255, 255, 255);
-      background-color: #5a5a5a42;
+  .flower-name {
+    position: relative;
+    top: -20%;
+    font-family: segoe;
+    color: rgb(255, 255, 255);
+    background-color: #5a5a5a42;
   }
-  
-  .wheel-frame{
+
+  .wheel-frame {
     position: relative;
     width: 500px;
     height: 500px;
     margin-left: auto;
     margin-right: auto;
   }
-  #arrow{
+  #arrow {
     position: absolute;
     width: 30px;
     left: 235px;
     z-index: 10;
     top: 50px;
-
   }
-  .season-pics{
+  .season-pics {
     position: absolute;
     width: 500px;
     rotate: 0deg;
     margin-right: auto;
     margin-left: auto;
     z-index: -1;
-  
   }
-  #link-grid{
+  #link-grid {
     position: absolute;
     width: 500px;
     height: 500px;
@@ -1358,9 +1340,8 @@ h5 {
     grid-template-rows: 1fr 1fr;
     transform: rotate(46deg);
     transition: all 2s linear;
-    
   }
-  .link{
+  .link {
     position: absolute;
     width: 250px;
     height: 250px;
@@ -1369,99 +1350,96 @@ h5 {
     margin-left: auto;
     cursor: pointer;
     z-index: 10;
-  
   }
-  #months{
+  #months {
     transform: rotate(0deg);
     transition: all 2s linear;
   }
 
-
-  #springlink{
+  #springlink {
     position: relative;
     border-radius: 20vh 0 0 0;
-    background-color: rgba(72, 255, 0, 0.0);
+    background-color: rgba(72, 255, 0, 0);
     z-index: 2;
   }
-  #summerlink{
+  #summerlink {
     position: relative;
     border-radius: 0 0 0 20vh;
-    background-color: rgba(255, 230, 0, 0.0);
+    background-color: rgba(255, 230, 0, 0);
     z-index: 2;
   }
-  #autumlink{
+  #autumlink {
     position: relative;
     border-radius: 0 0 20vh 0;
-    background-color: rgba(255, 60, 0, 0.0);
+    background-color: rgba(255, 60, 0, 0);
     z-index: 2;
   }
-  #winterlink{
+  #winterlink {
     position: relative;
     border-radius: 0 20vh 0 0;
-    background-color: rgba(0, 132, 255, 0.0);
+    background-color: rgba(0, 132, 255, 0);
     z-index: 2;
   }
   /*preset preview Desktop NEW CSS*/
-.preview-text {
-  margin-top: 10%;
-  text-align: center;
-}
-#preset-container {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  top: 60px;
-  width: 90%;
-  height: max-content;
-  border-radius: 40px;
-  align-items: center;
-  background: url(img/sectionback.webp);
-  background-size: cover;
-}
-#presetPreview {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 700px;
-  position: relative;
-  width: 100%;
-  height: 40%;
-  background-color: #e9e7deb7;
-  z-index: 1;
-  margin: auto;
-  border-radius: 40px;
-}
-.mySlides2 {
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 70%;
-  min-width: 300px;
-  border-radius: 15px;
-}
-.presetSlideshow {
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: auto;
-  margin-right: auto;
-}
-.discoverPresetsText {
-  max-width: 800px;
-  margin: auto;
-}
-.slideShowPreset {
-  margin-top: -40px;
-  display: flex;
-  justify-content: center;
-}
-.white-cell {
-  border-color: white;
-}
-.white-cell:hover {
-  background-color: white;
-}
+  .preview-text {
+    margin-top: 10%;
+    text-align: center;
+  }
+  #preset-container {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    top: 60px;
+    width: 90%;
+    height: max-content;
+    border-radius: 40px;
+    align-items: center;
+    background: url(img/sectionback.webp);
+    background-size: cover;
+  }
+  #presetPreview {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 700px;
+    position: relative;
+    width: 100%;
+    height: 40%;
+    background-color: #e9e7deb7;
+    z-index: 1;
+    margin: auto;
+    border-radius: 40px;
+  }
+  .mySlides2 {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 70%;
+    min-width: 300px;
+    border-radius: 15px;
+  }
+  .presetSlideshow {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .discoverPresetsText {
+    max-width: 800px;
+    margin: auto;
+  }
+  .slideShowPreset {
+    margin-top: -40px;
+    display: flex;
+    justify-content: center;
+  }
+  .white-cell {
+    border-color: white;
+  }
+  .white-cell:hover {
+    background-color: white;
+  }
 }
 /*preset preview End*/
-  /*season-wheel-Desktop-END*/
-
+/*season-wheel-Desktop-END*/
 
 /* style for hover effect  // thanks goes to https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_image_overlay_opacity */
 
@@ -1557,7 +1535,7 @@ h5 {
 
 /*choose us-Mobile */
 @media screen and (max-width: 768px) {
-  .content-card-nav{
+  .content-card-nav {
     display: none;
   }
   .chooseus-content {
@@ -1567,6 +1545,7 @@ h5 {
   .mindsetPicture1,
   .mindsetPicture2 {
     width: 44%;
+    border-radius: 15px;
   }
   .chooseUsMobilePictures {
     height: fit-content;
@@ -1709,7 +1688,6 @@ h5 {
     background-image: url(img/sectionback.webp);
     background-size: cover;
     background-position: 0px;
-
   }
   .footer-desktop h5 {
     font-family: sitka;
@@ -1722,4 +1700,11 @@ h5 {
 .activeOption:hover {
   text-decoration: underline;
 }
-
+/* Last day small adjustments*/
+.whyChooseUsFix {
+  padding-top: 3%;
+}
+.chooseUsMissingHeading {
+  text-align: end;
+  font-size: 20px;
+}
