--- a/styleForPresets.css
+++ b/styleForPresets.css
@@ -17,8 +17,6 @@ h2 {
   border-bottom: 2px solid currentColor;
   width: 250px;
 }
-h3 {
-}
 h4 {
   margin-left: 5%;
   margin-bottom: 0%;
@@ -89,8 +87,9 @@ h5 {
   margin-right: auto;
 }
 .discoverPresetsText {
-  max-width: 800px;
-  margin: auto;
+  max-width: 700px;
+  margin-left: 10%;
+  text-align: center;
 }
 .presetTextAdjust {
   max-width: 200px;
@@ -159,6 +158,7 @@ h5 {
   margin-bottom: 40px;
   border-radius: 10px;
   max-width: 420px;
+  max-height: 500px;
 }
 
 .presetPictureMobile {
@@ -167,9 +167,6 @@ h5 {
 .possibleOptions {
   margin-top: -30%;
   margin-left: 10%;
-}
-.presetOptions {
-  /*style later*/
 }
 a:hover {
   text-decoration: none;
@@ -360,7 +357,7 @@ h6 {
   border-radius: 15px;
 }
 .errorPictureMobile {
-  width: 80%;
+  width: 90%;
 }
 /* hiding mobile elements for Making desktop ver for 404 */
 @media screen and (min-width: 769px) {
