--- a/style.css
+++ b/style.css
@@ -89,14 +89,7 @@ h5 {
   margin: 10px;
   margin-left: 4rem;
 }
-.spacer1 {
-  width: 100%;
-  height: 2vh;
-}
-.spacer2 {
-  width: 100%;
-  height: 20vh;
-}
+
 /*buttons*/
 .button-main {
   position: absolute;
@@ -1571,10 +1564,6 @@ h5 {
     background-image: url(img/mobile-background.webp);
     background-size: cover;
   }
-  .spacer2,
-  .spacer1 {
-    display: none;
-  }
 }
 
 /* hiding mobile elements for Making desktop ver */
@@ -1622,7 +1611,8 @@ h5 {
   a {
     text-decoration: none;
   }
-  .boringInfo {
+  .boringInfo,
+  .boringInfo a {
     display: flex;
     width: 90%;
     margin-right: auto;
@@ -1665,11 +1655,7 @@ h5 {
 }
 /* Last day small adjustments*/
 .whyChooseUsFix {
-  padding-top: 3%;
-}
-.chooseUsMissingHeading {
-  text-align: end;
-  font-size: 20px;
+  padding-top: 2%;
 }
 @media (min-width: 300px) and (max-width: 370px) {
   .nav-link {
@@ -1683,4 +1669,10 @@ h5 {
 /*new fixes*/
 .desktopIcons {
   padding: 2%;
+}
+.chooseUsmobileHeadings {
+  display: flex;
+  width: 95%;
+  justify-content: space-between;
+  align-items: center;
 }
