--- a/styleForPresets.css
+++ b/styleForPresets.css
@@ -1,7 +1,3 @@
-body {
-  background-image: url(img/background.webp);
-  background-size: cover;
-}
 * {
   color: #5a5a5a;
   font-family: sitka;
@@ -272,6 +268,8 @@ h6 {
   max-width: 320px;
   border-bottom: 2px solid currentColor;
   margin-left: 10%;
+  margin-top: 5%;
+  margin-bottom: 2%;
 }
 .contactDesktopHeadingsGrid {
   display: grid;
@@ -323,10 +321,6 @@ h6 {
   .navigationButtonsDesktopFix,
   h6 {
     display: none;
-  }
-  body {
-    background-image: url(img/mobile-background.webp);
-    background-size: cover;
   }
 }
 /* Style for 404 error*/
