--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ h5 {
     background-color: #e9e7deb7;
     z-index: 1;
     margin: auto;
-    border-radius: 15px;
+    border-radius: 40px;
   }
   .content-card-nav {
     display: grid;
@@ -1565,6 +1565,12 @@ h5 {
   body {
     background-image: url(img/mobile-background.webp);
     background-size: cover;
+  }
+  .vl {
+    border-left: 1px solid rgb(0, 0, 0);
+  }
+  .hiddenVl {
+    display: none;
   }
 }
 
