--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ h5 {
   text-align: center;
 }
 .titleChooseUs {
+  width: max-content;
   position: relative;
   color: #707070;
   font-size: 25px;
@@ -1747,8 +1748,11 @@ p.underline {
 }
 /* Last day small adjustments*/
 .whyChooseUsFix {
-  padding-top: 2%;
-  margin-bottom: 3%;
+  padding-top: 3%;
+  margin: 2%;
+}
+.whyChooseUsFix2 {
+  padding-top: 5%;
 }
 @media (min-width: 300px) and (max-width: 370px) {
   .nav-link {
@@ -1765,9 +1769,14 @@ p.underline {
 }
 .chooseUsmobileHeadings {
   display: flex;
-  width: 95%;
+  width: 88%;
   justify-content: space-between;
-  align-items: center;
+  text-align: start;
+  text-align: center;
+  margin: 3%;
+  margin-left: auto;
+  margin-right: auto;
+  vertical-align: middle;
 }
 hr {
   background-color: #3b3b3b;
