--- a/style.css
+++ b/style.css
@@ -71,6 +71,13 @@ h5 {
   margin-bottom: 8px;
   text-align: center;
 }
+.text-contFix {
+  color: #707070;
+  font-size: 23px;
+  font-family: segoe;
+  margin-top: 25%;
+  margin-bottom: 25%;
+}
 .titleChooseUs {
   width: max-content;
   position: relative;
@@ -1005,7 +1012,7 @@ p.underline {
     margin-right: auto;
     top: 60px;
     width: 90%;
-    height: 83vh;
+    height: 700px;
     border-radius: 40px;
     align-items: center;
     background: url(img/sectionback.webp);
@@ -1017,7 +1024,7 @@ p.underline {
     grid-template-columns: 1fr 1fr;
     position: relative;
     width: 100%;
-    height: 83vh;
+    height: 700px;
     background-color: #e9e7deb7;
     z-index: 1;
     margin: auto;
@@ -1038,7 +1045,8 @@ p.underline {
   /*featured picture-Desktop end*/
 
   #video-cemerica {
-    height: 83vh;
+    max-height: 700px;
+    min-width: 600px;
   }
   .videoframe {
     position: relative;
@@ -1155,7 +1163,10 @@ p.underline {
     align-items: center;
     text-align: center;
   }
-
+  .active,
+  .slider-cell:hover {
+    background-color: #717171;
+  }
   .slider {
     position: relative;
     top: 10px;
@@ -1352,6 +1363,11 @@ p.underline {
 
   .mindsetImg {
     width: 80%;
+    border-radius: 15px;
+    margin-bottom: 30px;
+  }
+  .mindsetImgThird {
+    width: 74.2%;
     border-radius: 15px;
     margin-bottom: 30px;
   }
@@ -1810,7 +1826,7 @@ p.underline {
   .nav-link {
     font-size: 17px;
   }
-  .cells7 {
+  .slider-cell {
     margin: 4px;
     margin-top: 16px;
   }
